Modify main layout

--- a/src/Tosk/Components/Layout/MainLayout.razor
+++ b/src/Tosk/Components/Layout/MainLayout.razor
@@ -1,9 +1,5 @@
 ﻿@inherits LayoutComponentBase
 
-<div>
-    <main>
-        <article>
-            @Body
-        </article>
-    </main>
+<div class="font-monospace">
+    @Body
 </div>
