--- a/src/Tosk/Components/Pages/Todo.razor
+++ b/src/Tosk/Components/Pages/Todo.razor
@@ -2,7 +2,7 @@
 @inject ITodoService TodoTaskService
 
 <div class="d-flex flex-column justify-content-between p-3" style="height:100vh">
-    <div class="overflow-auto remove-scrollbar">
+    <div class="overflow-auto remove-scrollbar" tabindex="-1" style="outline: none">
         <ol class="list-group  list-group-flush">
             @foreach (var task in TodoTaskService.GetAll())
             {
@@ -38,7 +38,7 @@
                 <InputText @bind-Value="TodoTitle" class="form-control" placeholder="Add a task!" required autofocus />
             </div>
             <div class="col-auto">
-                <button type="submit" class="btn btn-primary">
+                <button type="submit" class="btn btn-success">
                     <i class="bi bi-plus-lg"></i>
                 </button>
             </div>
