--- a/src/Tosk/Components/_Imports.razor
+++ b/src/Tosk/Components/_Imports.razor
@@ -8,4 +8,7 @@
 @using Tosk
 @using Tosk.Components
 @using Tosk.Models
-@using Tosk.Services
+@using Tosk.Enums
+@using Tosk.Services.Theming
+@using Tosk.Services.Todo
+@using Tosk.Components.Buttons
