--- a/src/Tosk/Components/Pages/Todo.razor.css
+++ b/src/Tosk/Components/Pages/Todo.razor.css
@@ -10,3 +10,8 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
 }
+
+.line-through-complete {
+    text-decoration-line: line-through;
+    text-decoration-color: var(--bs-success); /* Use Bootstrap's success color */
+}
