--- a/src/Tosk/Components/Pages/Todo.razor
+++ b/src/Tosk/Components/Pages/Todo.razor
@@ -4,9 +4,9 @@
 <div class="d-flex flex-column justify-content-between p-3" style="height:100vh">
     <div class="mb-3 row justify-content-between">
         <div class="col-auto fs-4">
+            <GithubRepoLaunchButton/>
+            <span class="fw-bold">>_ Tosk <sup><span class="badge rounded-pill text-bg-primary">v@(AppInfo.Current.VersionString)</span></sup></span>
             <ThemeTogglerButton />
-            <GithubRepoLaunchButton />
-            <span class="fw-bold">>_ Tosk</span>
         </div>
         <div class="col-auto" >
             <InputRadioGroup @bind-Value="FilterBy">
@@ -62,7 +62,7 @@
     <div class="mt-3">
         <form class="row" @onsubmit="() => TodoTaskService.Add(TodoTitle)">
             <div class="col">
-                <InputText @bind-Value="TodoTitle" class="form-control" placeholder="Add a task!" required autofocus />
+                <InputText @bind-Value="TodoTitle" class="form-control" placeholder="Add a task!" autofocus />
             </div>
             <div class="col-auto">
                 <button type="submit" class="btn btn-success">
@@ -78,10 +78,10 @@
 
     FilterBy FilterBy { get; set; }
 
-    IEnumerable<Models.Todo> Todos => FilterBy switch
+    IEnumerable<Models.Todo> Todos => (FilterBy switch
     {
         FilterBy.Completed => TodoTaskService.GetAllCompleted(),
         FilterBy.Important => TodoTaskService.GetAllImportant(),
         _ => TodoTaskService.GetAll(),
-    };
+    }).ToArray();
 }
