--- a/src/Tosk/Components/Pages/Todo.razor
+++ b/src/Tosk/Components/Pages/Todo.razor
@@ -12,7 +12,7 @@
             <InputRadioGroup @bind-Value="FilterBy">
                 <div class="btn-group" role="group">
                     <InputRadio Value="FilterBy.All" id="all" class="btn-check" />
-                    <label class="btn btn-outline-secondary" for="all">
+                    <label class="btn btn-outline-primary" for="all">
                         <i class="bi bi-sunglasses"></i> All
                     </label>
 
@@ -65,7 +65,7 @@
                 <InputText @bind-Value="TodoTitle" class="form-control" placeholder="Add a task!" autofocus />
             </div>
             <div class="col-auto">
-                <button type="submit" class="btn btn-success">
+                <button type="submit" class="btn btn-primary">
                     <i class="bi bi-plus-lg"></i>
                 </button>
             </div>
