--- a/src/Tosk/_Imports.razor
+++ b/src/Tosk/_Imports.razor
@@ -15,4 +15,5 @@
 @using System.ComponentModel
 @using Tosk.TodoTask.View.TitleBar
 @using Tosk.TodoTask.View.TitleBar.Buttons
-
+@using Tosk.TodoTask.View.Content
+@using Tosk.TodoTask.View.Form
