--- a/src/Tosk/TodoTask/View/Content/TodoList.razor
+++ b/src/Tosk/TodoTask/View/Content/TodoList.razor
@@ -2,13 +2,13 @@
 @inject TodoVM TodoVM
 
 <div class="overflow-auto remove-scrollbar" tabindex="-1" style="outline: none">
-        <ol class="list-group  list-group-flush">
+    <ol class="list-group  list-group-flush">
         @foreach (var todo in TodoVM.Todos)
         {
-                                            <TodoItem Value="todo"/>
+            <TodoItem Value="todo" />
         }
-        </ol>
-    </div>
+    </ol>
+</div>
 
 @code {
 
@@ -18,6 +18,7 @@
     {
         propertyChangedEventHandler = (sender, args) => InvokeAsync(StateHasChanged);
         TodoVM.Subscribe(propertyChangedEventHandler);
+        await TodoVM.LoadDataAsync();
         await base.OnInitializedAsync();
     }
 
