--- a/src/Tosk/_Imports.razor
+++ b/src/Tosk/_Imports.razor
@@ -13,7 +13,8 @@
 @using Tosk.Components.Layout
 @using Tosk.TodoTask.ViewModel
 @using System.ComponentModel
-@using Tosk.TodoTask.View.TitleBar
-@using Tosk.TodoTask.View.TitleBar.Buttons
-@using Tosk.TodoTask.View.Content
-@using Tosk.TodoTask.View.Form
+@using Tosk.TodoTask.View.Header
+@using Tosk.TodoTask.View.Header.Buttons
+@using Tosk.TodoTask.View.Main
+@using Tosk.TodoTask.View.Main.Buttons
+@using Tosk.TodoTask.View.Footer
