--- a/src/Tosk/TodoTask/View/Todo.razor
+++ b/src/Tosk/TodoTask/View/Todo.razor
@@ -1,22 +1,24 @@
 ﻿@page "/"
 @inject TodoVM TodoVM
-@using TodoModel = Tosk.TodoTask.Models.Todo
 
-<div class="d-flex flex-column justify-content-between p-3" style="height:100vh">
-    <div class="mb-3 row justify-content-between">
-        <div class="col-auto fs-4">
-            <GithubRepoLaunchButton />
-            <LinkedinProfileLaunchButton />
-            <AppTitle />
-            <ThemeTogglerButton />
-        </div>
-        <div class="col-auto">
-            <FilterByRadioButton />
-        </div>
-    </div>
-    <TodoList />
-    @if (TodoVM.FilterBy == FilterBy.All)
-    {
-        <TodoForm />
-    }
+<div class="d-flex flex-column justify-content-between p-3 vh-100">
+    <header>
+        <AppControlBar />
+    </header>
+    <main class="overflow-auto remove-scrollbar" style="outline: none">
+        @if (TodoVM.Todos.Count() != 0)
+        {
+            <img src="img/sleep-emoji.png" class="h-50 mx-auto" />
+        }
+        else
+        {
+            <TodoList />
+        }
+    </main>
+    <footer class="mt-3">
+        @if (TodoVM.FilterBy == FilterBy.All)
+        {
+            <TodoForm />
+        }
+    </footer>
 </div>
