--- a/src/Tosk/TodoTask/View/Todo.razor.css
+++ b/src/Tosk/TodoTask/View/Todo.razor.css
@@ -1,4 +1,5 @@
-﻿/* Hide scrollbar for Chrome, Safari and Opera */
+﻿
+/* Hide scrollbar for Chrome, Safari and Opera */
 .remove-scrollbar::-webkit-scrollbar {
     display: none;
 }
