added toggle to database or in-memory for live and demo mode respectively

--- a/src/Tosk/TodoTask/View/Header/AppControlBar.razor
+++ b/src/Tosk/TodoTask/View/Header/AppControlBar.razor
@@ -3,6 +3,7 @@
         <GithubRepoLaunchButton />
         <LinkedinProfileLaunchButton />
         <AppTitle />
+        <AppModeTogglerButton />
         <ThemeTogglerButton />
     </div>
     <div class="col-auto">
